# hermes-web-extract

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker.yml
docs/: api-reference.md  architecture.md  configuration.md  hermes-integration.md  index.md  installation.md  limitations.md  security-model.md  troubleshooting.md
examples/: curl-firecrawl-compatible.sh  curl-native-extract.sh  docker-compose.browser.yml  hermes-config-example.yaml
src/hermes_local_web_extract/: __init__.py  cache.py  config.py  errors.py  fetcher.py  logging_config.py  main.py  models.py  normalizers.py  pipeline.py  rate_limit.py  security.py
src/hermes_local_web_extract/extractors/: base.py  crawl4ai_extractor.py  html_fallback.py  html_readability.py  html_trafilatura.py  pdf_extractor.py
src/hermes_local_web_extract/routers/: firecrawl_compat.py  health.py  native.py
src/hermes_local_web_extract/utils/: metadata.py  text.py  urls.py
tests/: conftest.py  test_edge_cases.py  test_firecrawl_compat.py  test_health.py  test_html_extractors.py  test_native_extract.py  test_pdf_extractor.py  test_rate_limit.py  test_redirect_security.py  test_url_security.py
